--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    //Dar permiso de ubicación (si usarás gimnasios cercanos)
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
 
 
 
@@ -13,6 +16,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Gym_coleman_application">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyD-MnnQeWD4TZ305KkjHjjcXHIq6_2nRL8" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
